--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^12.8.3",
     "chart.js": "^3.6.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.25.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "socket.io": "^4.2.0",
